--- a/posts/tutorials.qmd
+++ b/posts/tutorials.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Post With Code"
+title: "WACOM tablet"
 description: "Post description"
 author: "Fizz McPhee"
 date: "5/22/2021"
@@ -9,7 +9,9 @@ categories:
   - analysis
 ---
 
-## Tutorials
+## New Experiences
+
+
 
 ```{r}
 4*5
