--- a/index.qmd
+++ b/index.qmd
@@ -8,33 +8,29 @@ about:
   image-width: 20em
   links:
     - text: LinkedIn
-      href: https://www.linkedin.com/in/samanthacsik/
+      href: https://www.linkedin.com/in/zhenglei-gao-069967b/
     - text: GitHub
-      href: https://github.com/samanthacsik
+      href: https://github.com/Zhenglei-BCS
     - text: Email
-      href: mailto:scsik@ucsb.edu
+      href: mailto:zhenglei.gao@bayer.com
 ---
 
 ### This content appears above the formatted about page content.
 
-:::{#hero-heading}
-
-Finley Malloc is the Chief Data Scientist at Wengo Analytics. When not innovating on data platforms, Finley enjoys spending time unicycling and playing with her pet iguana.
+::: {#hero-heading}
+Example Notes
 
 ## Education
 
-University of California, San Diego | San Diego, CA
-PhD in Mathematics | Sept 2011 - June 2015
+University of California, San Diego \| San Diego, CA PhD in Mathematics \| Sept 2011 - June 2015
 
-Macalester College | St. Paul MA
-B.A in Economics | Sept 2007 - June 2011
+Macalester College \| St. Paul MA B.A in Economics \| Sept 2007 - June 2011
 
 ## Experience
 
-Wengo Analytics | Head Data Scientist | April 2018 - present
+Wengo Analytics \| Head Data Scientist \| April 2018 - present
 
-GeoScynce | Chief Analyst | Sept 2012 - April 2018
-
+GeoScynce \| Chief Analyst \| Sept 2012 - April 2018
 :::
 
 ### This content appears below the formatted about page content.
