--- a/posts/risk_metric.qmd
+++ b/posts/risk_metric.qmd
@@ -1,6 +1,6 @@
 ---
 title: "How to generate a risk asessment report for an R Package"
-description: "Here is a collection of resources and my thoughts"
+description: "Here is a collection of resources and my thoughts."
 author: "Zhenglei Gao"
 date: "8/07/2024"
 categories:
@@ -18,10 +18,10 @@ I find it challenging to cultivate a robust ecosystem for leveraging open-source
 
 -   An excerpt from that white paper.
 
-```
-6.5. Vendor Assessments and Trusted Resources
 
-For proprietary software it is common to perform vendor assessments / audits to explore the internal validation practices of the vendor. If a company is satisfied with the internal validation practices of the vendor, they may designate the vendor a ’trusted’ status. The impact of this might be that any software produced by that vendor is deemed to be low risk.
+> 6.5. Vendor Assessments and Trusted Resources
 
-For open source software such audits are not logistically feasible. However, based on information available in the open source domain, it may still be possible to perform a virtual audit of a vendor and their practices. For example, R Foundation and R Core team, have published information about their practices in R: Regulatory Compliance and Validation Issues. A Guidance Document for the Use of R in Regulated Clinical Trial Environments. It is the opinion of the R Validation Hub that this is sufficient to allocate the R Foundation a trusted status. This would render the collection of Base R and Recommended packages low risk as a result.
+> For proprietary software it is common to perform vendor assessments / audits to explore the internal validation practices of the vendor. If a company is satisfied with the internal validation practices of the vendor, they may designate the vendor a ’trusted’ status. The impact of this might be that any software produced by that vendor is deemed to be low risk.
+
+> For open source software such audits are not logistically feasible. However, based on information available in the open source domain, it may still be possible to perform a virtual audit of a vendor and their practices. For example, R Foundation and R Core team, have published information about their practices in R: Regulatory Compliance and Validation Issues. A Guidance Document for the Use of R in Regulated Clinical Trial Environments. It is the opinion of the R Validation Hub that this is sufficient to allocate the R Foundation a trusted status. This would render the collection of Base R and Recommended packages low risk as a result.
 ```
