--- a/posts/test.qmd
+++ b/posts/test.qmd
@@ -1,8 +1,8 @@
 ---
-title: "testing blog"
+title: "Testing blog"
 description: "Post description"
 author: "Zhenglei Gao"
-date: "8/22/2023"
+date: "8/06/2024"
 categories:
   - code
   - analysis
